sandbox/output
Anagram.java:22: error: <identifier> expected
    private String swapTwoLetterWord(string) {
                                           ^
1 error
